--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ osx_image: xcode10
 language: objective-c
 
 xcode_workspace: GraverDemo.xcworkspace
-xcode_scheme: GraverDemoTests
+xcode_scheme: GraverDemo
+xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
+
+podfile: ./podfile
+
+before_install:
+- bundle install
+
+install:
+- pod repo update
+- bundle exec pod install --verbose
+
+cache:
+- cocoapods
